# content-docs

./: .env  .firebaserc  .gitignore  .npmrc  .pre-commit-config.yaml  Expanse  Palo Alto Networks Cortex XDR - Investigation and Response  Pipfile  README.md  Ransomware-readme.md  Test File  config.yml  contentItemsDocsLinks.json  docusaurus.config.js  firebase.json  genMarketplace.js  genPackDetails.js  generate_toc.ts  index.json  mdx-parse-server.js  mdx-parse.js  mdx-parse.mjs  memoryLogger.js  package-lock.json  package.json  plopfile.js  pyproject.toml  results.out  sidebars.js  test.json  urls_ignore.txt
.circleci/: config.yml
.github/: auto-assign-issues.yml  auto_assign-issues.yml  config.yml  dependabot-circleci.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: developer-documentation-issue.md
.github/workflows/: auto-assign-issues.yml  build.yml  codeql.yml  forked-pr-deploy.yml  forked-pr-netlify-deploy.yml  handle_new_contribution.yml  links-verify.yml  netlify_deploy.yml  netlify_deploy_preview.yml  urls_ignore.txt
.gitlab/: helper_functions.sh
.gitlab/ci/: .gitlab-ci.yml
.hooks/: bootstrap
build_scripts/: generate_sidebar.ts  generate_toc.ts  tsconfig.json
build_utils/: slack_notifier.py
content-repo/: .flake8  .gitignore  Pipfile  articles-index.md  create-docs.sh  download_site_build.py  download_site_build_test.py  download_site_builid.py  error-2.txt  error.txt  error2.txt  gen-pydocs.py  gen_pydocs.py  gen_pydocs_test.py  gen_top_contrib.py  gendocs.py  gendocs_test.py  get_top_contrib_test.py  ignored_entities.json  mdx_utils.py  mypy.ini  pipenv.out  post_github_comment.py  post_github_comment_test.py  pytest.ini  reference-index.md  top-contribution.md  top-contributors.md
content-repo/extra-docs/: 20.5.1.md
content-repo/mdx-parse-server/: mdx-parse-server.js  package-lock.json  package.json
content-repo/test_data/: CommonServerPython.py  bad-mdx-readme.md  circleci-forked-build.json  circleci-non-forked-build.json  circleci-non-pr-build.json  demistomock.py  github-status-event.json  netlify-deploy-info.json  parsed.md
debug/: cert.key  cert.pem
docs/: README.md  become-a-tech-partner.md  changelog.md  circleci.md  code-conventions.md  concepts.md  context-and-outputs.md  context-standards.md  dbot.md  debugging.md  demistoide.md  design-best-practices.md  dev-architecture.md  dev-guide.mdx  dev-setup.md  doc-structure.md  docker.md  dt.md  faq.md  feeds.md  fetching-credentials.md  fetching-incidents.md  generic-polling.md  get-started.md  getting-started-guide.md  howtos.md  integration-context.md  integration-docs.md  linting.md  long-running.md  mocks.md  pack_metadata.md  package-dir.md  packs_format.md  parameter-types.md  playbook-contributions.md  playbook-conventions.md  playbooks.md  privacy.md  reference.md  (+14 more)
docs/concepts/: Concepts.md  con-cortex-xsoar-overview.md  concept.md  concepts.md  demisto-sdk-docker.md  demisto-sdk-validate.md  demisto-sdk.md  design-best-practices.md  design.md  dev-requirements.md  dev-setup.md  faq.md  getting-started-guide.md  incident-xsoar-incident-lifecycle.md  overview.md  pycharm-plugin.md  use-cases.md  vscode-extension.md  xsoar-ide.md
docs/contributing/: checklist.md  circleci.md  contrib-requirements.md  contributing.md  conventions.md  demo-prep.md  docs-contrib.md  marketplace.md  sdk.md  sla.md
docs/documentation/: documentation_tips.md  images_in_documentation_files.md  integration-description.md  pack-docs.md  readme_file.md  release-notes.md
docs/howtos/: fetching-credentials.md  generic-polling.md  how-contributing.md  how-dashboards.md  how-incidents.md  how-integrations.md  how-scripts.md  howto.md  long-running.md  parameter-types.md
docs/incidents/: howto-incident-fields.md  incident-auto-extract.md  incident-classification-mapping.md  incident-customize-incident-layout.md  incident-fields.md  incident-jobs.md  incident-lists.md  incident-pre-processing.md  incident-types.md  incident-xsoar-incident-lifecycle.md
docs/indicators/: Relationships.md  domain-extraction.md  indicator-fields.md  relationships.md  url-extraction.md
docs/integrations/: Trust-any-certificate.md  about-context-standards.md  api-execution-metrics.md  changelog-old-format.md  changelog-old.md  changelog.md  code-conventions.md  code-generator.md  collectors.md  context-and-outputs.md  context-standards-about.md  context-standards-mandatory.md  context-standards-recommended.md  context-standards.md  custom-indicator.md  dbot.md  debugging.md  default-common-integration-parameters  description-docs.md  dev-setup.md  doc-structure.md  docker.md  documentation_best_practices.md  documentation_tips.md  dt.md  dynamic-ui-fields.md  entitlements.md  feeds.md  fetch-incidents-lookback.md  fetching-credentials.md  fetching-incidents.md  generate-integration.md  generic-command-endpoint.md  generic-commands-about.md  generic-commands-iam.md  generic-commands-reputation.md  get-entries-filter.md  getting-started-guide.md  iam-integrations.md  indicators-relationship.md  (+30 more)
docs/packs/: pack-docs-redir.md  pack-rn-redir.md  packs-format.md  premium_packs.md
docs/partners/: Private Offer  Private-Offer  adopt.md  become-a-tech-partner.md  benefits.md  certification.md  development-partners.md  marketplace.md  office-hours.md  paid-packs-process  paid-packs-process.md  partner-owned-integration.md  premium-packs-process.md  pretty.md  private-offer.md  support-videos.md  why-demisto.md  why-xsoar.md
docs/playbooks/: playbooks.md  (+16 more)
docusaurus-plugin-gtm/: index.js
editor-plugin/: LearningEditor.js  index.js  style.module.css
static/: _redirects  marketplace-index-mapping.json
templates/: details.hbs
tutorial/: Connection-issues-troubleshooting-guide.md
(+359 files in other folders)
