[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.run]
omit = ["**/conftest.py", "*/test_data/*", "*_test.py", "conftest.py"]
relative_files = true

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
exclude = [
  ".*_test.py$",
  ".venv",
  "artifacts*",
  "test_.*.py",
  "test_data",
  "tests_data"
]
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
pretty = true
python_version = "3.9"
show_error_codes = true

[tool.poetry]
authors = ["Cortex XSOAR"]
description = ""
name = "content-docs"
package-mode = false
readme = "README.md"
version = "0.0.5"

[tool.poetry.dependencies]
PyYAML = "^6.0"
inflection = "^0.5.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.32.3"
pydoc-markdown = "==3.10.0"
python-dateutil = "^2.9.0"
slack_sdk = "^3.31.0"
packaging = "^24"
google-api-python-client = "^2.64.0"
google-cloud-storage = "^2.9.0"
docspec = "^2.2.1"

[tool.poetry.group.dev.dependencies]
types-PyYAML = "6.0.12.20240311"
types-python-dateutil = "2.9.0.20241003"
types-requests = "2.32.0.20240914"

[tool.ruff]
line-length = 130
target-version = "py39"
lint.ignore = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
  "PLC1901", # compare-to-empty-string
  "RUF005", # collection-literal-concatenation"
  "RUF012", # mutable-class-default
  "RUF013", # implicit-optional
  "RUF015", # unnecessary-iterable-allocation-for-first-element
  "RUF017", # quadratic-list-summation
  "RUF100" # unused-noqa
]
lint.select = [
  'E',
  'F',
  'FURB',
  'I',
  'PIE',
  'PLC',
  'PLE',
  'RSE',
  'RUF',
  'TID',
  'UP',
  'YTT'
]
