[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.run]
omit = ["**/conftest.py", "*/test_data/*", "*_test.py", "conftest.py"]
relative_files = true

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
exclude = [
  ".*_test.py$",
  ".venv",
  "artifacts*",
  "test_.*.py",
  "test_data",
  "tests_data"
]
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
pretty = true
python_version = "3.10"
show_error_codes = true

[tool.poetry]
authors = ["Cortex XSOAR"]
description = ""
name = "content-docs"
package-mode = false
readme = "README.md"
version = "0.0.5"

[tool.poetry.dependencies]
beautifulsoup4 = "==4.12.2"
cachetools = "==5.3.1"
certifi = "==2023.5.7"
charset-normalizer = "==3.1.0"
docspec = "==0.2.1"
docspec-python = "==0.1.0"
google-api-core = "*"  # "==2.11.0"
google-api-python-client = "*"  # "==2.88.0"
google-auth = "*"  # "==2.19.0"
google-auth-httplib2 = "*"  # "==0.1.0"
google-cloud-core = "*"  # "==2.3.2"
google-cloud-storage = "*"  # "==2.9.0"
google-crc32c = "*"  # "==1.5.0"
google-resumable-media = "*"  # "==2.5.0"
googleapis-common-protos = "*"  # "==1.59.0"
httplib2 = "==0.22.0"
idna = "==3.4"
inflection = "==0.5.1"
"nr.collections" = "==0.0.1"
"nr.databind.core" = "==0.0.22"
"nr.databind.json" = "==0.0.14"
"nr.fs" = "==1.6.3"
"nr.interface" = "==0.0.5"
"nr.metaclass" = "==0.0.6"
"nr.parsing.date" = "==0.6.1"
"nr.pylang.utils" = "==0.0.4"
"nr.stream" = "==0.0.5"
"nr.sumtype" = "==0.0.5"
"nr.utils.re" = "==0.1.1"
protobuf = "==4.23.2"
pyasn1 = "==0.5.0"
pyasn1-modules = "==0.3.0"
pydoc-markdown = "==3.10.0"
pyparsing = "==3.0.9"
python = "^3.9"
python-dateutil = "*"  # "==2.8.2"
pyyaml = "==5.3" # "==5.4.1"
requests = "*"  # "==2.31.0"
rsa = "*"  # "==4.9"
six = "==1.16.0"
slack-sdk = "==3.21.3"
soupsieve = "==2.4.1"
toml = "==0.10.2"
types-python-dateutil = "*"  # "==2.8.19.13"
types-pyyaml = "*"  # "==6.0.12.10"
types-requests = "*"  # "==2.31.0.1"
types-urllib3 = "==1.26.25.13"
uritemplate = "==4.1.1"
urllib3 = "==1.26.16"
watchdog = "==1.0.2"
python-gitlab = "^3.0.0"  # import gitlab
junitparser = "^3.1.2"
jira = "^3.8.0"
gitpython = "^3.1.43"  # import git

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2"
requests-mock = ">=1.9.3"
pytest-mock = ">=3.7.0"
freezegun = ">=1.1.0"
dateparser = ">=1.2.0"

[tool.ruff]
line-length = 130
target-version = "py310"
lint.ignore = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
  "PLC1901", # compare-to-empty-string
  "RUF005", # collection-literal-concatenation"
  "RUF012", # mutable-class-default
  "RUF013", # implicit-optional
  "RUF015", # unnecessary-iterable-allocation-for-first-element
  "RUF017", # quadratic-list-summation
  "RUF100" # unused-noqa
]
lint.select = [
  'E',
  'F',
  'FURB',
  'I',
  'PIE',
  'PLC',
  'PLE',
  'RSE',
  'RUF',
  'TID',
  'UP',
  'YTT'
]
